[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/textures/icons/trash16x16.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/PT-Bold_16.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/PT-Regular_16_Button.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/interfaces/Items/IngredientItem.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/PT-Italic_16.tres" type="DynamicFont" id=5]

[node name="IngredientItem" type="HBoxContainer" groups=["ingredient_item"]]
anchor_right = 1.0
rect_min_size = Vector2( 0, 36 )
size_flags_horizontal = 3
script = ExtResource( 4 )

[node name="QuantityLabel" type="Label" parent="."]
margin_top = 3.0
margin_right = 8.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 2 )
align = 2

[node name="PrepLabel" type="Label" parent="."]
visible = false
margin_left = 8.0
margin_top = 3.0
margin_right = 33.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )
text = "de"

[node name="IngredientLabel" type="Label" parent="."]
margin_left = 12.0
margin_top = 3.0
margin_right = 20.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 3 )

[node name="AdditionalLabel" type="Label" parent="."]
margin_left = 24.0
margin_top = 3.0
margin_right = 32.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 5 )

[node name="Delete" type="Button" parent="."]
modulate = Color( 0.8, 0.807843, 0.827451, 1 )
margin_left = 1870.0
margin_right = 1920.0
margin_bottom = 36.0
focus_mode = 0
size_flags_horizontal = 10
enabled_focus_mode = 0
text = "     "
icon = ExtResource( 1 )
flat = true

[connection signal="pressed" from="Delete" to="." method="_on_Delete_pressed"]
